--- a/style.css
+++ b/style.css
@@ -1,30 +1,33 @@
-:root{
-    --size: 16px;
-    --container: calc(var(--size) * 16);
+:root {
+  --container: 500px;
 }
 
-*{
-    margin: 0;
-    border: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  border: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-body{
-    display: flex;
-    justify-content: center;
-    padding-top: 30px;
-}
-
-div.pixel {
-    width: var(--size);
-    height: var(--size);
+body {
+  display: flex;
+  justify-content: center;
+  padding-top: 30px;
 }
 
 div#container {
-    display: flex;
-    flex-wrap: wrap;
-    height: var(--container);
-    width: var(--container);
-    background-color: rgba(0, 0, 0, 0.05);
+  display: flex;
+  flex-direction: column;
+  height: var(--container);
+  width: var(--container);
+  background-color: rgba(0, 0, 0, 0.05);
+}
+
+div.line {
+  display: flex;
+  flex: 1;
+}
+
+div.pixel {
+  flex: 1;
 }
