--- a/style.css
+++ b/style.css
@@ -11,8 +11,10 @@
 
 body {
   display: flex;
-  justify-content: center;
+  gap: 30px;
+  flex-direction: column;
   padding-top: 30px;
+  align-items: center;
 }
 
 div#container {
@@ -30,4 +32,9 @@ div.line {
 
 div.pixel {
   flex: 1;
+}
+
+button{
+    width: var(--container);
+    border-radius: 8px;
 }
